feat(recall): #MZI-214 adapt front for recall rework

--- a/admin/src/main/resources/i18n/fr.json
+++ b/admin/src/main/resources/i18n/fr.json
@@ -247,12 +247,17 @@
   "management.zimbra.return.detail.sender": "Expéditeur",
   "management.zimbra.return.detail.totalMessages": "Nombre de messages à rappeler",
   "management.zimbra.return.detail.sentOn": "Envoyé le",
-  "management.zimbra.return.statut.WAITING": "En attente depuis le ",
-  "management.zimbra.return.statut.REMOVED": "Rappel effectué le ",
-  "management.zimbra.return.statut.PROGRESS": "Rappel en cours depuis le ",
-  "management.zimbra.return.statut.ERROR": "Erreur pendant le rappel du ",
+  "management.zimbra.return.statut.WAITING": "En attente de validation",
+  "management.zimbra.return.statut.REMOVED": "Rappel effectué",
+  "management.zimbra.return.statut.PROGRESS": "Rappel en cours",
+  "management.zimbra.return.statut.ERROR": "Erreur pendant le rappel",
   "management.zimbra.return.button": "Rappeler les messages",
+  "management.zimbra.recall.date": "Rappel demandé le ",
+  "management.zimbra.recall.refresh": "Rafraîchir",
+  "management.zimbra.recall.number.message": "message à rappeler",
+  "management.zimbra.recall.number.message.plural": "messages à rappeler",
   "management.zimbra.return.tooltip.remove": "Supprimer la demande selectionnée.",
+  "management.zimbra.return.progress": "Progression",
   "management.zimbra.return.tooltip.error": "Erreur pendant le rappel des mails, veuillez ressayer.",
   "management.zimbra.return.lightbox.list": "Vous allez rappeler les messages envoyés suivants :",
   "management.zimbra.return.lightbox.remove": "Les messages seront supprimés de la messagerie des utilisateurs.",
