--- a/admin/src/main/resources/i18n/fr.json
+++ b/admin/src/main/resources/i18n/fr.json
@@ -249,10 +249,11 @@
   "management.zimbra.return.detail.sender": "Expéditeur",
   "management.zimbra.return.detail.totalMessages": "Nombre de messages à rappeler",
   "management.zimbra.return.detail.sentOn": "Envoyé le",
-  "management.zimbra.return.statut.WAITING": "En attente de validation",
-  "management.zimbra.return.statut.REMOVED": "Rappel effectué",
-  "management.zimbra.return.statut.PROGRESS": "Rappel en cours",
-  "management.zimbra.return.statut.ERROR": "Erreur pendant le rappel",
+  "management.zimbra.recall.statut.WAITING": "En attente de validation",
+  "management.zimbra.recall.statut.REMOVED": "Rappel effectué",
+  "management.zimbra.recall.statut.REMOVED.date": "Rappel effectué le",
+  "management.zimbra.recall.statut.PROGRESS": "Rappel en cours",
+  "management.zimbra.recall.statut.ERROR": "Erreur pendant le rappel",
   "management.zimbra.return.button": "Rappeler les messages",
   "management.zimbra.recall.date": "Rappel demandé le ",
   "management.zimbra.recall.refresh": "Rafraîchir",
